--- a/index_old.html
+++ b/index_old.html
@@ -122,7 +122,14 @@ a {
  transform-origin:0 0;
  position:absolute;
 }
-#lp-pom-image-1652 { display:block; background:rgba(255,255,255,0); left:50%; top:20px; transform:translateX(-50%); z-index:8; position:absolute; }
+#lp-pom-image-1652 {
+ display:none;
+ background:rgba(255,255,255,0);
+ left:20px;
+ top:184px;
+ z-index:8;
+ position:absolute;
+}
 #lp-pom-box-1720 {
  display:block;
  background:rgba(255,255,255,1);
