--- a/index_1.html
+++ b/index_1.html
@@ -323,7 +323,7 @@ td, th { padding: 0px; }
 .czNyPd { height: 100%; }
 .hlIUEI { position: relative; }
 .kfKsag { width: 100%; }
-.gNEGfp { padding-inline: 80px; text-align: start; }
+.gNEGfp { padding-inline: 40; text-align: start; }
 .kZTuiw { height: 100%; display: flex; }
 [dir="rtl"] .kZTuiw.kZTuiw { -webkit-box-pack: end; justify-content: flex-end; }
 .hBuNuv { position: relative; height: 100%; width: 100%; display: flex; -webkit-box-pack: center; justify-content: center; flex-direction: column; transition: 600ms; visibility: visible; }
