--- a/index.html
+++ b/index.html
@@ -4234,10 +4234,12 @@ a {
             de la valeur de votre logement.</span></p>
       </div>
     </div>
-<div class="lp-element lp-pom-text nlh" id="lp-pom-text-1680" style="height: auto;">
+    <div class="lp-element lp-pom-box" id="lp-pom-box-1681">
+      <div id="lp-pom-box-1681-color-overlay"></div>
+      <div class="lp-element lp-pom-text nlh" id="lp-pom-text-1682" style="height: auto;">
         <p style="line-height: 24px;"><span
             style="font-family: Manrope; font-weight: 500; font-style: normal; font-size: 16px; color: rgb(93, 186, 140);"><strong>80% d'économies</strong></span><span
-            style="font-family: Manrope; font-weight: 500; font-style: normal; font-size: 16px; color: rgb(14, 43, 102);">&nbsp;sur vos factures d'électricité.</span></p>
+            style="font-family: Manrope; font-weight: 500; font-style: normal; font-size: 16px; color: rgb(14, 43, 102);">&nbsp;sur votre facture d'électricité.</span></p>
       </div>
       <div class="lp-element lp-pom-image" id="lp-pom-image-1683">
         <div class="lp-pom-image-container" style="overflow: hidden;"><img
