--- a/index.html
+++ b/index.html
@@ -3835,11 +3835,7 @@ a {
                     ?</span></span></span></span></span></p>
       </div>
       <div class="lp-element lp-pom-image" id="lp-pom-image-1643">
-        <div class="lp-pom-image-container" style="overflow: hidden;"><img src="" alt=""
-            data-src-mobile-1x="//d9hhrg4mnvzow.cloudfront.net/unbouncepages.com/d1c26466-c395-11f0-85ee-e2f9426e947d/1s6ajoj-panneaux-solaire_105t05t05t04c00000q01o.jpg"
-            data-src-mobile-2x="//d9hhrg4mnvzow.cloudfront.net/unbouncepages.com/d1c26466-c395-11f0-85ee-e2f9426e947d/1s6ajoj-panneaux-solaire_10bm0bm0bm08o00001g01o.jpg"
-            data-src-mobile-3x="//d9hhrg4mnvzow.cloudfront.net/unbouncepages.com/d1c26466-c395-11f0-85ee-e2f9426e947d/1s6ajoj-panneaux-solaire_10hf0hf0hf0d000002601o.jpg"
-            srcset=""></div>
+        <div class="lp-pom-image-container" style="overflow: hidden;"><img src="1s6ajoj-panneaux-solaire_10bm0bm0bm08o00001g01o.jpg"></div>
       </div>
     </div>
     <div class="lp-element lp-pom-text nlh" id="lp-pom-text-1473" style="height: auto;">
