--- a/index.html
+++ b/index.html
@@ -3857,18 +3857,15 @@ a {
     </div>
     <div class="lp-element lp-pom-box" id="lp-pom-box-1476">
       <div id="lp-pom-box-1476-color-overlay"></div>
-      <div class="lp-element lp-pom-text nlh" id="lp-pom-text-1477"
-        style="height: auto; letter-spacing: 0px; word-spacing: -1px; width: 309px; transform: scale(0.876, 1); transform-origin: left top;">
+      <div class="lp-element lp-pom-text nlh" id="lp-pom-text-1477" style="height: auto;">
         <p style="line-height: 24px; text-align: center;"><span
-            style="font-family: Manrope; font-weight: 500; font-style: normal; font-size: 16px; color: rgb(14, 43, 102);">Le
-            programme&nbsp;</span><span
-            style="font-family: Manrope; font-weight: 500; font-style: normal; font-size: 16px; color: rgb(93, 186, 140);"><strong>MaPrimeRénov'</strong></span><span
-            style="font-family: Manrope; font-weight: 500; font-style: normal; font-size: 16px; color: rgb(14, 43, 102);">&nbsp;offre
-            des subventions pouvant atteindre jusqu'à&nbsp;</span><span
-            style="font-family: Manrope; font-weight: 500; font-style: normal; font-size: 16px; color: rgb(93, 186, 140);"><strong>20
-              000 euros</strong></span><span
-            style="font-family: Manrope; font-weight: 500; font-style: normal; font-size: 16px; color: rgb(14, 43, 102);">,
-            en fonction des revenus et des performances énergétiques du logement</span></p>
+            style="font-family: Manrope; font-weight: 500; font-style: normal; font-size: 16px; color: rgb(14, 43, 102);"><span
+              style="color: rgb(2, 42, 106);">Le programme </span><span
+              style="color: rgb(93, 186, 140);"><strong>Ma Prime Rénov'</strong></span>
+              <span style="color: rgb(2, 42, 106);"> offre des subventions pouvant atteindre jusqu'à </span><span
+              style="color: rgb(93, 186, 140);"><strong>20 000€ </strong></span><span
+              style="color: rgb(2, 42, 106);">.&nbsp,
+            en fonction des revenus et des performances énergétiques du logement</span></span></p>
       </div>
     </div>
     <div class="lp-element lp-pom-box" id="lp-pom-box-1489">
