--- a/index.html
+++ b/index.html
@@ -3900,16 +3900,15 @@ a {
     </div>
     <div class="lp-element lp-pom-box" id="lp-pom-box-1498">
       <div id="lp-pom-box-1498-color-overlay"></div>
-      <div class="lp-element lp-pom-text nlh" id="lp-pom-text-1499"
-        style="height: auto; letter-spacing: 0px; word-spacing: -1px; width: 309px; transform: scale(0.876, 1); transform-origin: left top;">
+      <div class="lp-element lp-pom-text nlh" id="lp-pom-text-1499" style="height: auto;">
         <p style="line-height: 24px; text-align: center;"><span
             style="font-family: Manrope; font-weight: 500; font-style: normal; font-size: 16px; color: rgb(14, 43, 102);"><span
-              style="color: rgb(2, 42, 106);">Il est possible de bénéficier de&nbsp;</span><span
-              style="color: rgb(93, 186, 140);"><strong>l'éco-prêt à taux zéro</strong></span><span
-              style="color: rgb(2, 42, 106);">, d'un montant pouvant aller jusqu'à&nbsp;</span><span
-              style="color: rgb(93, 186, 140);"><strong>30 000 euros</strong></span><span
-              style="color: rgb(2, 42, 106);">, pour financer votre projet d'installation de panneaux
-              solaires.</span></span></p>
+              style="color: rgb(2, 42, 106);">Il est possible de bénéficier de </span><span
+              style="color: rgb(93, 186, 140);"><strong>l'éco-prêt à taux zéro
+                Energétique</strong></span><span style="color: rgb(2, 42, 106);">, d'un montant pouvant aller jusqu'à </span><span
+              style="color: rgb(93, 186, 140);"><strong>30 000€</strong></span><span
+              style="color: rgb(2, 42, 106);">.&nbsp;, pour financer votre programme d'installation de panneaux solaires</span></span></p>
+      </div>
       </div>
     </div><a class="lp-element lp-pom-button" id="lp-pom-button-1515" href="#lp-pom-root" target="_self"><span
         class="label"><strong>Je calcule mes aides</strong></span></a>
