--- a/index.html
+++ b/index.html
@@ -3760,16 +3760,11 @@ a {
                 et sans engagement</span></span></span></p>
       </div>
       <div class="lp-element lp-code" id="lp-code-1397"><!-- lp:insertions start div#lp-code-1397 -->
-        <div data-tf-live="01J46FYTFABPM5BAG9TN7VJ962" data-tf-loaded="true">
-          <div data-tf-widget="jCXFJT3p" data-tf-opacity="0" data-tf-inline-on-mobile=""
+        <div data-tf-live="01J46FYTFABPM5BAG9TN7VJ962"><div data-tf-widget="jCXFJT3p" data-tf-opacity="0" data-tf-inline-on-mobile=""
             data-tf-iframe-props="title=Panneaux solaires" data-tf-transitive-search-params="" data-tf-medium="snippet"
             data-tf-hidden="civilite=,nom=,prenom=,telephone=,email=,code_postal=,code=,cohort=,analytics=,utm_source=,address="
-            style="width:100%;height:380px;" data-tf-loaded="true">
-            <div class="tf-v1-widget" data-testid="tf-v1-widget"><iframe src="index_1.html" data-testid="iframe"
-                allow="microphone; camera" title="Panneaux solaires"
-                style="border: 0px; transform: translateZ(0px);"></iframe></div>
-          </div>
-        </div><!-- lp:insertions end div#lp-code-1397 -->
+            style="width:100%;height:380px;" data-tf-loaded="true"></div><script src="//embed.typeform.com/next/embed.js"></script>
+<!-- lp:insertions end div#lp-code-1397 -->
       </div>
     </div>
     <div class="lp-element lp-pom-text nlh" id="lp-pom-text-1119" style="height: auto;">
