--- a/index.html
+++ b/index.html
@@ -3759,13 +3759,8 @@ a {
                 style="font-weight: 600; font-family: Manrope; background-color: rgba(255, 255, 255, 0); font-style: normal;">Gratuit
                 et sans engagement</span></span></span></p>
       </div>
-      <div class="lp-element lp-code" id="lp-code-1397"><!-- lp:insertions start div#lp-code-1397 -->
-        <div data-tf-live="01J46FYTFABPM5BAG9TN7VJ962"><div data-tf-widget="jCXFJT3p" data-tf-opacity="0" data-tf-inline-on-mobile=""
-            data-tf-iframe-props="title=Panneaux solaires" data-tf-transitive-search-params="" data-tf-medium="snippet"
-            data-tf-hidden="civilite=,nom=,prenom=,telephone=,email=,code_postal=,code=,cohort=,analytics=,utm_source=,address="
-            style="width:100%;height:380px;" data-tf-loaded="true"></div><script src="//embed.typeform.com/next/embed.js"></script>
-<!-- lp:insertions end div#lp-code-1397 -->
-      </div>
+<div data-tf-live="01J46FYTFABPM5BAG9TN7VJ962"></div>
+<script src="//embed.typeform.com/next/embed.js"></script>
     </div>
     <div class="lp-element lp-pom-text nlh" id="lp-pom-text-1119" style="height: auto;">
       <p style="line-height: 58px; text-align: center;"><span style="font-style: normal;"><span
