--- a/index.html
+++ b/index.html
@@ -4381,6 +4381,35 @@ a {
         }
     }
 </style>
+<style>
+/* Empêche le conteneur du formulaire d'écraser le haut */
+#lp-pom-block-93 {
+    position: relative !important;
+    height: auto !important;
+    min-height: 750px !important; /* Ajuste selon la hauteur de ton formulaire */
+}
+
+/* Empêche le formulaire de remonter sur le titre */
+#lp-code-1397 {
+    position: relative !important;
+    margin-top: 50px !important;
+    z-index: 2;
+}
+
+/* Le formulaire doit rester dans le flow, pas en absolute */
+#lp-code-1397 iframe,
+#lp-code-1397 [data-tf-widget] {
+    display: block !important;
+    position: relative !important;
+    height: auto !important;
+    min-height: 600px !important; /* ajustable */
+}
+
+/* Désactive les top:absolute hérités d'unbounce */
+#lp-pom-block-93 .lp-pom-block-content {
+    position: static !important;
+}
+</style>
 
 
 <div class="backdrop__3tG5Hl"></div></body><style id="igor_ext_nofollow">a[rel~='nofollow'],a[rel~='sponsored'],a[rel~='ugc']{outline:.14em dotted red !important;outline-offset:.2em;}a[rel~='nofollow'] img,a[rel~='sponsored'] img,a[rel~='ugc'] img{outline:2px dotted red !important;outline-offset:.2em;}</style></html>
