--- a/index.html
+++ b/index.html
@@ -3759,7 +3759,7 @@ a {
                 style="font-weight: 600; font-family: Manrope; background-color: rgba(255, 255, 255, 0); font-style: normal;">Gratuit
                 et sans engagement</span></span></span></p>
       </div>
-<div data-tf-live="01J46FYTFABPM5BAG9TN7VJ962" style:"margin-top:50px"></div>
+<div data-tf-live="01J46FYTFABPM5BAG9TN7VJ962" style="margin-top:50px"></div>
 <script src="//embed.typeform.com/next/embed.js"></script>
     </div>
     <div class="lp-element lp-pom-text nlh" id="lp-pom-text-1119" style="height: auto;">
@@ -4380,35 +4380,6 @@ a {
             width: 80% !important;
         }
     }
-</style>
-<style>
-/* Empêche le conteneur du formulaire d'écraser le haut */
-#lp-pom-block-93 {
-    position: relative !important;
-    height: auto !important;
-    min-height: 750px !important; /* Ajuste selon la hauteur de ton formulaire */
-}
-
-/* Empêche le formulaire de remonter sur le titre */
-#lp-code-1397 {
-    position: relative !important;
-    margin-top: 50px !important;
-    z-index: 2;
-}
-
-/* Le formulaire doit rester dans le flow, pas en absolute */
-#lp-code-1397 iframe,
-#lp-code-1397 [data-tf-widget] {
-    display: block !important;
-    position: relative !important;
-    height: auto !important;
-    min-height: 600px !important; /* ajustable */
-}
-
-/* Désactive les top:absolute hérités d'unbounce */
-#lp-pom-block-93 .lp-pom-block-content {
-    position: static !important;
-}
 </style>
 
 
