div overlay rollback

--- a/index.html
+++ b/index.html
@@ -4320,6 +4320,10 @@ a {
     <div id="lp-pom-block-93-color-overlay"></div>
     <div class="lp-pom-block-content"></div>
   </div>
+  <div class="lp-element lp-pom-block" id="lp-pom-block-245">
+    <div id="lp-pom-block-245-color-overlay"></div>
+    <div class="lp-pom-block-content"></div>
+  </div>
   <div class="lp-element lp-pom-block" id="lp-pom-block-1675">
     <div id="lp-pom-block-1675-color-overlay"></div>
     <div class="lp-pom-block-content"></div>
