--- a/index.html
+++ b/index.html
@@ -3770,7 +3770,6 @@ a {
                   style="font-size: 42px;">solaires</span><span style="font-size: 42px;">&nbsp;</span></span><span
                 style="color: rgb(0, 48, 90);"><span style="font-size: 42px;">?</span></span></span></span></span></p>
     </div>
-    <div class="logos">
     <div class="lp-element lp-pom-image" id="lp-pom-image-1400">
       <div class="lp-pom-image-container" style="overflow: hidden;"><img
           src="1lspgdw-f0cee30f-totalenergies-1-1-105404203y03401600w028_103i02t03i02o000005028.png" alt=""
@@ -3814,7 +3813,7 @@ a {
           srcset="fmu9qt-7ed36cf1-agence-nationale-de-l-habitat-anah-seeklogo-com-1-103w03w000000000000028_103203203202v000007028.png 1x, fmu9qt-7ed36cf1-agence-nationale-de-l-habitat-anah-seeklogo-com-1-103w03w000000000000028_100000003w03n000009028.png 2x">
       </div>
       </div>
-    </div><a class="lp-element lp-pom-button" id="lp-pom-button-1458" href="#lp-pom-root" target="_self"><span
+<a class="lp-element lp-pom-button" id="lp-pom-button-1458" href="#lp-pom-root" target="_self"><span
         class="label"><strong>Mon devis gratuit</strong></span></a>
     <div class="lp-element lp-pom-box" id="lp-pom-box-1461">
       <div id="lp-pom-box-1461-color-overlay"></div>
