--- a/index.html
+++ b/index.html
@@ -3770,6 +3770,7 @@ a {
                   style="font-size: 42px;">solaires</span><span style="font-size: 42px;">&nbsp;</span></span><span
                 style="color: rgb(0, 48, 90);"><span style="font-size: 42px;">?</span></span></span></span></span></p>
     </div>
+    <div id="logos-container">
     <div class="lp-element lp-pom-image" id="lp-pom-image-1400">
       <div class="lp-pom-image-container" style="overflow: hidden;"><img
           src="1lspgdw-f0cee30f-totalenergies-1-1-105404203y03401600w028_103i02t03i02o000005028.png" alt=""
@@ -3811,6 +3812,7 @@ a {
           data-src-mobile-2x="//d9hhrg4mnvzow.cloudfront.net/unbouncepages.com/d1c26466-c395-11f0-85ee-e2f9426e947d/fmu9qt-7ed36cf1-agence-nationale-de-l-habitat-anah-seeklogo-com-1-103w03w000000000000028_102e02e02e028000006028.png"
           data-src-mobile-3x="//d9hhrg4mnvzow.cloudfront.net/unbouncepages.com/d1c26466-c395-11f0-85ee-e2f9426e947d/fmu9qt-7ed36cf1-agence-nationale-de-l-habitat-anah-seeklogo-com-1-103w03w000000000000028_103l03l03l03c000009028.png"
           srcset="fmu9qt-7ed36cf1-agence-nationale-de-l-habitat-anah-seeklogo-com-1-103w03w000000000000028_103203203202v000007028.png 1x, fmu9qt-7ed36cf1-agence-nationale-de-l-habitat-anah-seeklogo-com-1-103w03w000000000000028_100000003w03n000009028.png 2x">
+      </div>
       </div>
       </div>
 <a class="lp-element lp-pom-button" id="lp-pom-button-1458" href="#lp-pom-root" target="_self"><span
@@ -4381,6 +4383,36 @@ a {
             width: 80% !important;
         }
     }
+</style>
+
+<style>
+#logos-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 15px;
+  padding: 10px 20px;
+  width: 100%;
+  max-width: 350px;
+  margin: 0 auto;
+}
+
+#logos-container .logo {
+  width: auto;
+  height: 32px;
+  object-fit: contain;
+}
+
+/* RESPONSIVE */
+@media (max-width: 480px) {
+  #logos-container {
+    gap: 10px;
+    padding: 0 10px;
+  }
+  #logos-container .logo {
+    height: 26px;
+  }
+}
 </style>
 
 
