--- a/index.html
+++ b/index.html
@@ -4426,6 +4426,31 @@ a {
       height: 26px;
     }
   }
+
+  /* Masque les anciens logos Unbounce */
+#lp-pom-image-1541,
+#lp-pom-image-1544,
+#lp-pom-image-1537,
+#lp-pom-image-1540 {
+    display: none !important;
+}
+
+/* Active ton container clean */
+#logos-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 10px;
+    width: 100%;
+    max-width: 350px;
+    margin: 0 auto;
+}
+
+#logos-container img {
+    max-height: 26px;
+    width: auto;
+}
+
 </style>
 
 
