--- a/index.html
+++ b/index.html
@@ -1998,7 +1998,7 @@ a {
  top:197px;
  z-index:2;
  width:287px;
- height:520px;
+ height:562px;
  position:absolute;
 }
 #lp-pom-text-1009 {
@@ -3770,7 +3770,6 @@ a {
                   style="font-size: 42px;">solaires</span><span style="font-size: 42px;">&nbsp;</span></span><span
                 style="color: rgb(0, 48, 90);"><span style="font-size: 42px;">?</span></span></span></span></span></p>
     </div>
-    <div id="logos-container">
     <div class="lp-element lp-pom-image" id="lp-pom-image-1400">
       <div class="lp-pom-image-container" style="overflow: hidden;"><img
           src="1lspgdw-f0cee30f-totalenergies-1-1-105404203y03401600w028_103i02t03i02o000005028.png" alt=""
@@ -3813,9 +3812,7 @@ a {
           data-src-mobile-3x="//d9hhrg4mnvzow.cloudfront.net/unbouncepages.com/d1c26466-c395-11f0-85ee-e2f9426e947d/fmu9qt-7ed36cf1-agence-nationale-de-l-habitat-anah-seeklogo-com-1-103w03w000000000000028_103l03l03l03c000009028.png"
           srcset="fmu9qt-7ed36cf1-agence-nationale-de-l-habitat-anah-seeklogo-com-1-103w03w000000000000028_103203203202v000007028.png 1x, fmu9qt-7ed36cf1-agence-nationale-de-l-habitat-anah-seeklogo-com-1-103w03w000000000000028_100000003w03n000009028.png 2x">
       </div>
-      </div>
-      </div>
-<a class="lp-element lp-pom-button" id="lp-pom-button-1458" href="#lp-pom-root" target="_self"><span
+    </div><a class="lp-element lp-pom-button" id="lp-pom-button-1458" href="#lp-pom-root" target="_self"><span
         class="label"><strong>Mon devis gratuit</strong></span></a>
     <div class="lp-element lp-pom-box" id="lp-pom-box-1461">
       <div id="lp-pom-box-1461-color-overlay"></div>
@@ -4384,75 +4381,6 @@ a {
         }
     }
 </style>
-
-<style>
-  /* Conteneur des logos en flex */
-  #logos-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 20px 10px;
-    max-width: 350px;
-    margin: 0 auto;
-  }
-
-  /* Neutralise le position:absolute des blocs logos à l'intérieur du container */
-  #logos-container .lp-pom-image {
-    position: static !important;
-    width: auto !important;
-    height: auto !important;
-    margin: 0 5px !important;
-  }
-
-  #logos-container .lp-pom-image-container {
-    overflow: visible !important;
-    width: auto !important;
-    height: auto !important;
-  }
-
-  #logos-container .lp-pom-image img {
-    height: 32px;
-    width: auto;
-    object-fit: contain;
-    display: block;
-  }
-
-  /* Version mobile : un peu plus petits */
-  @media (max-width: 480px) {
-    #logos-container {
-      padding: 0 10px 8px;
-    }
-    #logos-container .lp-pom-image img {
-      height: 26px;
-    }
-  }
-
-  /* Masque les anciens logos Unbounce */
-#lp-pom-image-1541,
-#lp-pom-image-1544,
-#lp-pom-image-1537,
-#lp-pom-image-1540 {
-    display: none !important;
-}
-
-/* Active ton container clean */
-#logos-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 10px;
-    width: 100%;
-    max-width: 350px;
-    margin: 0 auto;
-}
-
-#logos-container img {
-    max-height: 26px;
-    width: auto;
-}
-
-</style>
-
 
 
 <div class="backdrop__3tG5Hl"></div></body><style id="igor_ext_nofollow">a[rel~='nofollow'],a[rel~='sponsored'],a[rel~='ugc']{outline:.14em dotted red !important;outline-offset:.2em;}a[rel~='nofollow'] img,a[rel~='sponsored'] img,a[rel~='ugc'] img{outline:2px dotted red !important;outline-offset:.2em;}</style></html>
